--- a/CSS/sass/components/_agenda-bar.scss
+++ b/CSS/sass/components/_agenda-bar.scss
@@ -27,7 +27,7 @@
         // education
         background-color: lighten($navy, 10%);
         padding: .5em;
-    }   
+    }
     .event-col span.event-title:nth-child(2), .event-col span.event-title:nth-child(6) {
         // keynote
         background-color: $orange;
@@ -50,7 +50,7 @@
         background-color: $green;
         padding: .5em;
     }
-    
+
     .event-col span.event-title:nth-child(8) {
         // block party
         background-color: darken($red, 10%);
@@ -66,19 +66,19 @@
         background-color: darken($red, 30%);
         padding: .5em;
     }
-     
+
     .event-col span.event-title:nth-child(14) {
         // futures
         background-color: $red;
         padding: .5em;
     }
-    
+
     .event-col span.event-title:nth-child(15) {
         // partner summit
         background-color: darken($blue, 20%);
         padding: .5em;
     }
-    
+
 }
 .agenda-bars {
     display: none;
@@ -105,14 +105,14 @@
 
     .label-col {
         display: none;
-        
+
         @include medium {
             display: grid;
             grid-column: 1/2;
             grid-row: 2/11;
             z-index: 1;
             border-bottom: 1px solid lighten($blue, 40%);
-    
+
             & .event-label:nth-child(1) {
                 grid-row: 2/3;
                 border-bottom: 1px solid lighten($blue, 40%);
@@ -152,7 +152,7 @@
                 grid-row: 9/10;
                 border-bottom: 1px solid lighten($blue, 40%);
                 padding: .5em 0;
-                
+
             }
             & .event-label:nth-child(9) {
                 grid-row: 10/11;
@@ -162,7 +162,7 @@
             & .event-label:nth-child(10) {
                 grid-row: 11/12;
                 padding: .5em 0;
-    
+
             }
 
         }
@@ -179,7 +179,7 @@
             grid-column: 1/2;
             grid-row: 2/3;
         }
-    }   
+    }
     .event-col span.event-title:nth-child(2) {
         // education
         background-color: lighten($navy, 10%);
@@ -192,7 +192,30 @@
         }
     }
     .event-col span.event-title:nth-child(3) {
-        // sessions
+        // expo hall and lounge
+        grid-column: 2/3;
+        grid-row: 1/10;
+        background-color: $gray;
+        padding: .5em;
+        @include medium {
+            grid-column: 1/4;
+            grid-row: 3/4;
+        }
+    }
+    .event-col span.event-title:nth-child(4) {
+        // general sessions
+        grid-column: 1/2;
+        grid-row: 2/8;
+        background-color: $orange;
+        padding: .5em;
+
+        @include medium {
+            grid-column: 1/3;
+            grid-row: 4/5;
+        }
+    }
+    .event-col span.event-title:nth-child(5) {
+        // sessions and workshops
         grid-column: 2/3;
         grid-row: 6/10;
         background-color: $green;
@@ -200,60 +223,35 @@
 
         @include medium{
             grid-column: 2/4;
-            grid-row: 3/4;
-        }
-    }
-    .event-col span.event-title:nth-child(4) {
-        // keynotes
-        grid-column: 1/2;
-        grid-row: 2/8;
-        background-color: $orange;
-        padding: .5em;
-
-        @include medium {
-            grid-column: 2/4;
-            grid-row: 4/5;
-        }
-    }
-    .event-col span.event-title:nth-child(5) {
-        // engagement zone
-        grid-column: 2/3;
-        grid-row: 1/10;
-        background-color: $gray;
-        padding: .5em;
-        @include medium {
-            grid-column: 1/4;
             grid-row: 5/6;
         }
     }
     .event-col span.event-title:nth-child(6) {
-        // block party
-        background-color: darken($red, 10%);
-        padding: .5em;
+        // executive forum
         @include medium {
             grid-column: 2/3;
             grid-row: 6/7;
 
         }
+        background-color: lighten($blue, 10%);
+        padding: .5em;
     }
     .event-col span.event-title:nth-child(7) {
-        // futures
-        @include medium {
-            grid-column: 3/4;
-            grid-row: 7/8;
-        }
-        background-color: $red;
+        // womens networking
+        grid-column: 2/3;
+        grid-row: 7/8;
+        background-color: darken($red, 30%);
         padding: .5em;
     }
     .event-col span.event-title:nth-child(8) {
-        // executive summit
+        // block party
+        background-color: darken($red, 10%);
+        padding: .5em;
         @include medium {
             grid-column: 2/3;
             grid-row: 8/9;
 
         }
-        background-color: lighten($blue, 10%);
-        padding: .5em;
     }
     .event-col span.event-title:nth-child(9) {
         // partner summit
@@ -268,10 +266,12 @@
         }
     }
     .event-col span.event-title:nth-child(10) {
-        // womens networking
-        grid-column: 2/3;
-        grid-row: 10/11;
-        background-color: darken($red, 30%);
+        // futures
+        @include medium {
+            grid-column: 3/4;
+            grid-row: 10/11;
+        }
+        background-color: $red;
         padding: .5em;
     }
     .event-col span.event-title:nth-child(11) {
@@ -352,7 +352,7 @@
         }
     }
 
-    
+
 
     .time-markers {
         @include display(flex);
