--- a/CSS/cvent-responsive-template-CSS.css
+++ b/CSS/cvent-responsive-template-CSS.css
@@ -4477,6 +4477,52 @@ a.cta-button,
     opacity: 0;
     margin-top: 0; }
 
+#call-to-action {
+  background: #11566F;
+  background: linear-gradient(to bottom, #11566F, #333333); }
+  #call-to-action .final-cta {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+    margin: 0 auto;
+    position: relative; }
+    @media (min-width: 768px) {
+      #call-to-action .final-cta {
+        width: 75%; } }
+    @media (min-width: 1100px) {
+      #call-to-action .final-cta {
+        width: 60%; } }
+    @media (min-width: 1400px) {
+      #call-to-action .final-cta {
+        width: 50%; } }
+    #call-to-action .final-cta img {
+      width: 100%;
+      height: 100%; }
+    #call-to-action .final-cta .cta-button.large.red.expand {
+      position: relative;
+      width: 290px;
+      align-self: center; }
+      @media (min-width: 768px) {
+        #call-to-action .final-cta .cta-button.large.red.expand {
+          position: absolute;
+          align-self: center;
+          width: 43%;
+          margin-top: 0; } }
+  #call-to-action .final-date {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20px;
+    padding-left: 1.2em; }
+    @media (min-width: 768px) {
+      #call-to-action .final-date {
+        flex-direction: row;
+        padding-left: 0; } }
+    #call-to-action .final-date .icon-lockup {
+      padding: 10px 20px; }
+
 /*pages / pages*/
 #home-page #hero {
   border: 1px solid #ffffff; }
@@ -4914,50 +4960,6 @@ a.cta-button,
           line-height: 18px; }
       #home-page #highlights .speaker-card:last-child {
         margin-bottom: 0; } }
-#home-page #call-to-action_new {
-  background: linear-gradient(#254a58, #333333); }
-#home-page .final-cta {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: center;
-  align-content: center;
-  margin: 0 auto;
-  position: relative; }
-  @media (min-width: 768px) {
-    #home-page .final-cta {
-      width: 75%; } }
-  @media (min-width: 1100px) {
-    #home-page .final-cta {
-      width: 60%; } }
-  @media (min-width: 1400px) {
-    #home-page .final-cta {
-      width: 50%; } }
-#home-page .final-cta img {
-  width: 100%;
-  height: 100%; }
-#home-page .final-cta .cta-button.large.red.expand {
-  position: relative;
-  width: 290px;
-  align-self: center; }
-  @media (min-width: 768px) {
-    #home-page .final-cta .cta-button.large.red.expand {
-      position: absolute;
-      align-self: center;
-      width: 43%;
-      margin-top: 0; } }
-#home-page .final-date {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 20px;
-  padding-left: 1.2em; }
-  @media (min-width: 768px) {
-    #home-page .final-date {
-      flex-direction: row;
-      padding-left: 0; } }
-  #home-page .final-date .icon-lockup {
-    padding: 10px 20px; }
 
 #agenda-page {
   padding-top: 15px; }
