--- a/CSS/sass/global/header/_navigation.scss
+++ b/CSS/sass/global/header/_navigation.scss
@@ -2,7 +2,7 @@ $menu-mobile-height: 80px;
     //navigation div which serves as a row
     div {
         &.top {
-            
+
             .navigation {
                 @include display(flex);
                 @include flex(0, 1, auto);
@@ -13,7 +13,7 @@ $menu-mobile-height: 80px;
                 position: relative;
                 margin: 0 auto;
                 padding: 0 5px;
-                
+
                 @include medium {
                     padding: 0 15px;
                 }
@@ -21,7 +21,7 @@ $menu-mobile-height: 80px;
                 @include xlarge {
                     padding: 0 20px;
                 }
-        
+
                 #menu {
                     display: block;
                     position: absolute;
@@ -36,17 +36,17 @@ $menu-mobile-height: 80px;
                     max-height: 0;
                     height: auto;
                     overflow: hidden;
-        
+
                     >li:before {
                         display: none;
                     }
-        
+
                     @include transition;
-        
+
                     &:active {
                         @include drop-shadow(0, 0, 0, $pure-black);
                     }
-        
+
                     @include medium {
                         @include display(flex);
                         @include flex-direction(row);
@@ -62,40 +62,42 @@ $menu-mobile-height: 80px;
                         text-align: right;
                         padding: 0 10px 0 20px;
                     }
-        
-                    &.menu-opened {
-                        @include small {
-                            max-height: 100vh;
-                            @include drop-shadow(1px, 1px, 10px, fade-out($pure-black, .5));
-        
-                            &:after {
-                                background: $red;
-                                box-shadow:
-                                    0 0.25em 0 0 $red,
-                                    0 0.5em 0 0 $red;
+
+                    @include small-only {
+                        &.menu-opened {
+                            @include small {
+                                max-height: 100vh;
+                                @include drop-shadow(1px, 1px, 10px, fade-out($pure-black, .5));
+
+                                &:after {
+                                    background: $red;
+                                    box-shadow:
+                                        0 0.25em 0 0 $red,
+                                        0 0.5em 0 0 $red;
+                                }
+                            }
+                        }
+
+                        //hamburger icon for mobile view
+                        &:after {
+                            content: "";
+                            position: absolute;
+                            right: 15px;
+                            top: $menu-mobile-height / 2 - 5px;
+                            width: 1.5em;
+                            height: 0.15em;
+                            background: $dark-gray;
+                            box-shadow:
+                                0 0.25em 0 0 $dark-gray,
+                                0 0.5em 0 0 $dark-gray;
+                            @include transition;
+
+                            @include medium {
+                                display: none;
                             }
                         }
                     }
-        
-                    //hamburger icon for mobile view
-                    &:after {
-                        content: "";
-                        position: absolute;
-                        right: 15px;
-                        top: $menu-mobile-height / 2 - 5px;
-                        width: 1.5em;
-                        height: 0.15em;
-                        background: $dark-gray;
-                        box-shadow:
-                            0 0.25em 0 0 $dark-gray,
-                            0 0.5em 0 0 $dark-gray;
-                        @include transition;
-        
-                        @include medium {
-                            display: none;
-                        }
-                    }
-        
+
                     //menu items
                     li {
                         display: block;
@@ -106,7 +108,7 @@ $menu-mobile-height: 80px;
                         background-color: $light-gray;
                         border-top: 1px solid fade-out($white, .1);
                         border-bottom: 1px solid fade-out($pure-black, .9);
-        
+
                         @include medium {
                             @include display(flex);
                             // .flex-direction(row);
@@ -115,12 +117,12 @@ $menu-mobile-height: 80px;
                             background-color: $white;
                             border: none;
                         }
-        
+
                         &:hover ul,
                         ul {
                             display: none !important;
                         }
-        
+
                         a {
                             display: block;
                             position: relative;
@@ -133,28 +135,28 @@ $menu-mobile-height: 80px;
                             font-size: 16px;
                             line-height: 1em;
                             @include transition;
-        
+
                             @include medium {
                                 overflow: hidden;
                                 border-bottom: none;
                                 color: $monsoon;
                                 font-size: 14px;
                                 padding: 10px 20px;
-        
+
                                 //min-height:100%;
                                 &:hover {
                                     color: $red;
                                 }
                             }
                         }
-        
+
                         &.subnav-register {
                             padding: 10px;
-        
+
                             @include medium {
                                 padding: 0;
                             }
-        
+
                             a {
                                 background-color: $red;
                                 color: $white;
@@ -162,7 +164,7 @@ $menu-mobile-height: 80px;
                                 margin: 0;
                                 cursor: pointer;
                                 @include transition();
-        
+
                                 &:hover {
                                     background-color: $light-red;
                                 }
@@ -171,19 +173,19 @@ $menu-mobile-height: 80px;
                                     background-color: $dark-red;
                                 }
                             }
-        
+
                             //end register button link in nav
                         }
-        
+
                         //end register button li in nav
                     }
-        
+
                     //end menu li
                 }
-        
+
                 //end #menu ul list
                 //end .navigation
-               
+
             }
         }
     }
