--- a/CSS/sass/pages/_agenda.scss
+++ b/CSS/sass/pages/_agenda.scss
@@ -122,7 +122,7 @@
 		display:block;
 		position:relative;
 		width: 100%;
-		padding: .5em calc(1em + 20px) .5em 1em;
+		padding:0;
 		margin-top:10px;
 		box-shadow: 1px 1px 5px rgba(0,0,0,.3);
 
@@ -164,11 +164,12 @@
 
 				& label {
 					@include flex(1,0,auto);
-					margin-left:5px; margin-top:2px;
+					padding:2px 5px; margin:0;
 					text-transform: capitalize;
 					letter-spacing: normal;
 					font-size:14px;
 					font-weight:400!important;
+					cursor:pointer;
 				}
 			}
 			&>li {
@@ -178,6 +179,7 @@
 			}
 		}
 	}
+	.jplist-dd-panel {padding: .5em calc(1em + 20px) .5em 1em;}
 
 	#topic-filter{
 		z-index: 3;
