--- a/CSS/agenda-print/world2019-print-agenda-sheet.css
+++ b/CSS/agenda-print/world2019-print-agenda-sheet.css
@@ -532,7 +532,7 @@ p,
   .tags .text-label.role-tag {
     border-left-color: #4789A3; }
 
-.add-to-agenda, .details-expand, .session-type {
+.add-to-agenda, .details-expand, .session-type, .session-details, .session-speaker {
   display: none; }
 
 @media print {
