--- a/CSS/sass/components/_buttons.scss
+++ b/CSS/sass/components/_buttons.scss
@@ -5,6 +5,7 @@
     height: auto;
     overflow: hidden;
     margin-right: 15px;
+    margin-top: 10px;
     padding: 1em 2.5em;
     cursor: pointer;
     @include drop-shadow(1px, 1px, 3px, fade-out($pure-black, .8));
